<resources>
    <string name="app_name">App</string>
    <string name="strLogin">Login</string>
    <string name="strSenha">Senha</string>
    <string name="strLogar">Logar</string>
    <string name="strSmsSusseco">Login com Susseço</string>
    <string name="strSmsFalha">"Login ou senha invalido "</string>
    <string name="btnCadastra">Cadastra</string>
    <string name="strNome">Nome</string>
    <string name="strEmail">Email</string>
    <string name="strSalvar">Salvar</string>
    <string name="strCancelar">Cancelar</string>
    <string name="strTitleCadastro">Cadastro</string>
    <string name="strMasculino">Masculino</string>
    <string name="strFeminino">Feminino</string>
</resources>
