<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.app.CadastroActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strNome"
        android:ems="10"
        android:id="@+id/strNome"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNome"
        android:inputType="text"
        android:singleLine="true"
        android:drawableLeft="@drawable/user"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEmail"
        android:id="@+id/strEmail"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtEmail"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/email"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSenha"
        android:id="@+id/strSenha"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSenha"
        android:singleLine="true"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/lock"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdgSexo">
        <RadioButton
            android:text="@string/strMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbMasculino"
            android:layout_weight="1" />
        <RadioButton
            android:text="@string/strFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbFeminino"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strCancelar"
            android:id="@+id/btnCancelar"
            android:drawableLeft="@drawable/cross"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strSalvar"
            android:id="@+id/btnSalvar"/>
    </LinearLayout>
</LinearLayout>
